# project-maps

./: README.md  pyproject.toml
.github/: CODEOWNERS  labels.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: github.yml
docs/: README.md
docs/assets/models/project_logo/: model.bbmodel
