[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_maps"
description = "A Minecraft Architectural Placement System"
dynamic = ["version"]
license = { file = "LICENSE" }

[tool.setuptools.dynamic]
version = { attr = "project_maps.__version__" }
